[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Timed_Threads"
description = "Absolute time deadlines and thread cancelling for Python asynchronous threads"
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "MIT"}
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
          "Topic :: Utilities",
          "Programming Language :: Python",
          "Programming Language :: Python :: Implementation :: CPython",
          "Programming Language :: Python :: 3.9",
          "Programming Language :: Python :: 3.10",
          "Programming Language :: Python :: 3.11",
          "Programming Language :: Python :: 3.12",
          "Programming Language :: Python :: 3.13",
          "Operating System :: OS Independent",
          "License :: OSI Approved :: MIT License",
          "Intended Audience :: Developers",
          "Development Status :: 5 - Production/Stable"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Mathics3/python-timed-threads/"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = [
    "timed_threads",
]

[tool.setuptools.dynamic]
version = {attr = "timed_threads.version.__version__"}
